--- a/src/app/components/home-five/home-five.component.html
+++ b/src/app/components/home-five/home-five.component.html
@@ -23,140 +23,142 @@
     </div>
 </nav>
 
-<div class="five-banner-area">
-    <div class="banner-shape">
-        <img src="assets/img/home-five/banner1.png" alt="Shape">
-        <img src="assets/img/home_1.png" alt="Shape">
-    </div>
+<div class="waveWrapper waveAnimation">
+    <div class="five-banner-area">
+        <div class="banner-shape">
+            <img src="assets/img/home-five/banner1.png" alt="Shape">
+            <img src="assets/img/Untitled.png" width="70%" alt="Shape">
+        </div>
 
-    <div class="d-table">
-        <div class="d-table-cell">
-            <div class="container-fluid">
-                <div class="banner-content">
-                    <span>Welcome to KFS</span>
-                    <p style="font-size: 50px; font-weight: lighter"><b>Independent</b> Mortgage Advisors</p>
-                    <p>Making Home Buying Process Simple </p>
+        <div class="d-table">
+            <div class="d-table-cell">
+                <div class="container-fluid">
+                    <div class="banner-content">
+                        <span>Welcome to KFS</span>
+                        <p style="font-size: 50px; font-weight: lighter"><b>Independent</b> Mortgage Advisors</p>
+                        <p>Making Home Buying Process Simple </p>
 
-                    <div class="banner-form">
-                        <ul class="nav nav-pills" id="pills-tab" role="tablist">
-                            <li class="nav-item" role="presentation">
-                                <a class="nav-default active" id="pills-home-tab" data-bs-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Purchase</a>
-                            </li>
+                        <div class="banner-form">
+                            <ul class="nav nav-pills" id="pills-tab" role="tablist">
+                                <li class="nav-item" role="presentation">
+                                    <a class="nav-default active" id="pills-home-tab" data-bs-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Purchase</a>
+                                </li>
 
-                            <li class="nav-item" role="presentation">
-                                <a class="nav-default" id="pills-profile-tab" data-bs-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false">Refinance</a>
-                            </li>
-                        </ul>
+                                <li class="nav-item" role="presentation">
+                                    <a class="nav-default" id="pills-profile-tab" data-bs-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false">Refinance</a>
+                                </li>
+                            </ul>
 
-                        <div class="tab-content" id="pills-tabContent">
-                            <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
-                                <form>
-                                    <div class="row">
-                                        <div class="col-lg-6">
-                                            <div class="form-group">
-                                                <input type="text" class="form-control" placeholder="Purchase price *">
+                            <div class="tab-content" id="pills-tabContent">
+                                <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
+                                    <form>
+                                        <div class="row">
+                                            <div class="col-lg-6">
+                                                <div class="form-group">
+                                                    <input type="text" class="form-control" placeholder="Purchase price *">
+                                                </div>
+                                            </div>
+
+                                            <div class="col-lg-6">
+                                                <div class="form-group">
+                                                    <input type="text" class="form-control" placeholder="Estimated monthly">
+                                                </div>
+                                            </div>
+
+                                            <div class="col-lg-6">
+                                                <div class="form-group">
+                                                    <input type="text" class="form-control" placeholder="Down payment *">
+                                                </div>
+                                            </div>
+
+                                            <div class="col-lg-6">
+                                                <div class="form-group">
+                                                    <input type="text" class="form-control" placeholder="Property ZIP code *">
+                                                </div>
+                                            </div>
+
+                                            <div class="col-lg-6">
+                                                <div class="form-group">
+                                                    <select class="form-control">
+                                                        <option>Mortgage term length *</option>
+                                                        <option>Another option</option>
+                                                        <option>A option</option>
+                                                        <option>Potato</option>
+                                                    </select>
+                                                </div>
+                                            </div>
+
+                                            <div class="col-lg-6">
+                                                <div class="form-group">
+                                                    <input type="email" class="form-control" placeholder="Email address">
+                                                </div>
+                                            </div>
+
+                                            <div class="col-lg-6">
+                                                <button type="submit" class="btn banner-form-btn">Calculate money</button>
+                                            </div>
+
+                                            <div class="col-lg-6">
+                                                <a class="banner-call" href="tel:5432123451">Call Us: 5432 123 451 (Sat - Thu)</a>
                                             </div>
                                         </div>
+                                    </form>
+                                </div>
 
-                                        <div class="col-lg-6">
-                                            <div class="form-group">
-                                                <input type="text" class="form-control" placeholder="Estimated monthly">
+                                <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
+                                    <form>
+                                        <div class="row">
+                                            <div class="col-lg-6">
+                                                <div class="form-group">
+                                                    <input type="text" class="form-control" placeholder="Purchase price *">
+                                                </div>
+                                            </div>
+
+                                            <div class="col-lg-6">
+                                                <div class="form-group">
+                                                    <input type="text" class="form-control" placeholder="Estimated monthly">
+                                                </div>
+                                            </div>
+
+                                            <div class="col-lg-6">
+                                                <div class="form-group">
+                                                    <input type="text" class="form-control" placeholder="Down payment *">
+                                                </div>
+                                            </div>
+
+                                            <div class="col-lg-6">
+                                                <div class="form-group">
+                                                    <input type="text" class="form-control" placeholder="Property ZIP code *">
+                                                </div>
+                                            </div>
+
+                                            <div class="col-lg-6">
+                                                <div class="form-group">
+                                                    <select class="form-control">
+                                                        <option>Mortgage term length *</option>
+                                                        <option>Another option</option>
+                                                        <option>A option</option>
+                                                        <option>Potato</option>
+                                                    </select>
+                                                </div>
+                                            </div>
+
+                                            <div class="col-lg-6">
+                                                <div class="form-group">
+                                                    <input type="email" class="form-control" placeholder="Email address">
+                                                </div>
+                                            </div>
+
+                                            <div class="col-lg-6">
+                                                <button type="submit" class="btn banner-form-btn">Calculate money</button>
+                                            </div>
+
+                                            <div class="col-lg-6">
+                                                <a class="banner-call" href="tel:5432123451">Call Us: 5432 123 451 (Sat - Thu)</a>
                                             </div>
                                         </div>
-
-                                        <div class="col-lg-6">
-                                            <div class="form-group">
-                                                <input type="text" class="form-control" placeholder="Down payment *">
-                                            </div>
-                                        </div>
-
-                                        <div class="col-lg-6">
-                                            <div class="form-group">
-                                                <input type="text" class="form-control" placeholder="Property ZIP code *">
-                                            </div>
-                                        </div>
-
-                                        <div class="col-lg-6">
-                                            <div class="form-group">
-                                                <select class="form-control">
-                                                    <option>Mortgage term length *</option>
-                                                    <option>Another option</option>
-                                                    <option>A option</option>
-                                                    <option>Potato</option>
-                                                </select>
-                                            </div>
-                                        </div>
-
-                                        <div class="col-lg-6">
-                                            <div class="form-group">
-                                                <input type="email" class="form-control" placeholder="Email address">
-                                            </div>
-                                        </div>
-
-                                        <div class="col-lg-6">
-                                            <button type="submit" class="btn banner-form-btn">Calculate money</button>
-                                        </div>
-
-                                        <div class="col-lg-6">
-                                            <a class="banner-call" href="tel:5432123451">Call Us: 5432 123 451 (Sat - Thu)</a>
-                                        </div>
-                                    </div>
-                                </form>
-                            </div>
-
-                            <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
-                                <form>
-                                    <div class="row">
-                                        <div class="col-lg-6">
-                                            <div class="form-group">
-                                                <input type="text" class="form-control" placeholder="Purchase price *">
-                                            </div>
-                                        </div>
-
-                                        <div class="col-lg-6">
-                                            <div class="form-group">
-                                                <input type="text" class="form-control" placeholder="Estimated monthly">
-                                            </div>
-                                        </div>
-
-                                        <div class="col-lg-6">
-                                            <div class="form-group">
-                                                <input type="text" class="form-control" placeholder="Down payment *">
-                                            </div>
-                                        </div>
-
-                                        <div class="col-lg-6">
-                                            <div class="form-group">
-                                                <input type="text" class="form-control" placeholder="Property ZIP code *">
-                                            </div>
-                                        </div>
-
-                                        <div class="col-lg-6">
-                                            <div class="form-group">
-                                                <select class="form-control">
-                                                    <option>Mortgage term length *</option>
-                                                    <option>Another option</option>
-                                                    <option>A option</option>
-                                                    <option>Potato</option>
-                                                </select>
-                                            </div>
-                                        </div>
-
-                                        <div class="col-lg-6">
-                                            <div class="form-group">
-                                                <input type="email" class="form-control" placeholder="Email address">
-                                            </div>
-                                        </div>
-
-                                        <div class="col-lg-6">
-                                            <button type="submit" class="btn banner-form-btn">Calculate money</button>
-                                        </div>
-
-                                        <div class="col-lg-6">
-                                            <a class="banner-call" href="tel:5432123451">Call Us: 5432 123 451 (Sat - Thu)</a>
-                                        </div>
-                                    </div>
-                                </form>
+                                    </form>
+                                </div>
                             </div>
                         </div>
                     </div>
