--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,6 +18,7 @@ body {
     color: $grey-color;
     background-color: $white-color;
     font-size: $all-size;
+    overflow-x: hidden;
 }
 h1, h2, h3, h4, h5, h6 {
     line-height: 1.3;
