--- a/src/app/components/home-five/home-five.component.html
+++ b/src/app/components/home-five/home-five.component.html
@@ -7,19 +7,18 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="#home"  style="color: black">Home</a></li>
 
-            <li class="nav-item"><a class="nav-link" href="#about">About Us</a></li>
+            <li class="nav-item"><a class="nav-link" href="#about"  style="color: black">About Us</a></li>
 
-            <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
+            <li class="nav-item"><a class="nav-link" href="#services"  style="color: black">Services</a></li>
 
-            <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+            <li class="nav-item"><a class="nav-link" href="#contact"  style="color: black">Contact</a></li>
         </ul>
     </div>
 
     <div class="side-nav">
-        <a class="side-nav-left" routerLink="/home-five">Sign In</a>
-        <a class="side-nav-right" routerLink="/home-five"><i class='bx bx-link-external'></i>Sign Up</a>
+        <a class="side-nav-right" routerLink="/home-five"><i class='bx bx-link-external'></i>Log In</a>
     </div>
 </nav>
 
@@ -27,7 +26,7 @@
     <div class="five-banner-area">
         <div class="banner-shape">
             <img src="assets/img/home-five/banner1.png" alt="Shape">
-            <img src="assets/img/Untitled.png" width="70%" alt="Shape">
+            <img src="assets/img/Untitled.png"  alt="Shape">
         </div>
 
         <div class="d-table">
@@ -41,125 +40,10 @@
                         <div class="banner-form">
                             <ul class="nav nav-pills" id="pills-tab" role="tablist">
                                 <li class="nav-item" role="presentation">
-                                    <a class="nav-default active" id="pills-home-tab" data-bs-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Purchase</a>
-                                </li>
-
-                                <li class="nav-item" role="presentation">
-                                    <a class="nav-default" id="pills-profile-tab" data-bs-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false">Refinance</a>
+                                    <div class="nav-default active" id="pills-home-tab" data-bs-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Mortgage Calculator</div>
                                 </li>
                             </ul>
-
-                            <div class="tab-content" id="pills-tabContent">
-                                <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
-                                    <form>
-                                        <div class="row">
-                                            <div class="col-lg-6">
-                                                <div class="form-group">
-                                                    <input type="text" class="form-control" placeholder="Purchase price *">
-                                                </div>
-                                            </div>
-
-                                            <div class="col-lg-6">
-                                                <div class="form-group">
-                                                    <input type="text" class="form-control" placeholder="Estimated monthly">
-                                                </div>
-                                            </div>
-
-                                            <div class="col-lg-6">
-                                                <div class="form-group">
-                                                    <input type="text" class="form-control" placeholder="Down payment *">
-                                                </div>
-                                            </div>
-
-                                            <div class="col-lg-6">
-                                                <div class="form-group">
-                                                    <input type="text" class="form-control" placeholder="Property ZIP code *">
-                                                </div>
-                                            </div>
-
-                                            <div class="col-lg-6">
-                                                <div class="form-group">
-                                                    <select class="form-control">
-                                                        <option>Mortgage term length *</option>
-                                                        <option>Another option</option>
-                                                        <option>A option</option>
-                                                        <option>Potato</option>
-                                                    </select>
-                                                </div>
-                                            </div>
-
-                                            <div class="col-lg-6">
-                                                <div class="form-group">
-                                                    <input type="email" class="form-control" placeholder="Email address">
-                                                </div>
-                                            </div>
-
-                                            <div class="col-lg-6">
-                                                <button type="submit" class="btn banner-form-btn">Calculate money</button>
-                                            </div>
-
-                                            <div class="col-lg-6">
-                                                <a class="banner-call" href="tel:5432123451">Call Us: 5432 123 451 (Sat - Thu)</a>
-                                            </div>
-                                        </div>
-                                    </form>
-                                </div>
-
-                                <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
-                                    <form>
-                                        <div class="row">
-                                            <div class="col-lg-6">
-                                                <div class="form-group">
-                                                    <input type="text" class="form-control" placeholder="Purchase price *">
-                                                </div>
-                                            </div>
-
-                                            <div class="col-lg-6">
-                                                <div class="form-group">
-                                                    <input type="text" class="form-control" placeholder="Estimated monthly">
-                                                </div>
-                                            </div>
-
-                                            <div class="col-lg-6">
-                                                <div class="form-group">
-                                                    <input type="text" class="form-control" placeholder="Down payment *">
-                                                </div>
-                                            </div>
-
-                                            <div class="col-lg-6">
-                                                <div class="form-group">
-                                                    <input type="text" class="form-control" placeholder="Property ZIP code *">
-                                                </div>
-                                            </div>
-
-                                            <div class="col-lg-6">
-                                                <div class="form-group">
-                                                    <select class="form-control">
-                                                        <option>Mortgage term length *</option>
-                                                        <option>Another option</option>
-                                                        <option>A option</option>
-                                                        <option>Potato</option>
-                                                    </select>
-                                                </div>
-                                            </div>
-
-                                            <div class="col-lg-6">
-                                                <div class="form-group">
-                                                    <input type="email" class="form-control" placeholder="Email address">
-                                                </div>
-                                            </div>
-
-                                            <div class="col-lg-6">
-                                                <button type="submit" class="btn banner-form-btn">Calculate money</button>
-                                            </div>
-
-                                            <div class="col-lg-6">
-                                                <a class="banner-call" href="tel:5432123451">Call Us: 5432 123 451 (Sat - Thu)</a>
-                                            </div>
-                                        </div>
-                                    </form>
-                                </div>
-                            </div>
+                            <app-calculator></app-calculator>
                         </div>
                     </div>
                 </div>
